[tool.poetry]
name = "chess-in-terminal"
version = "0.1.0"
description = ""
authors = ["Alpha-Potat <luchinin.n@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
rich = "^13.7.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core==1.7.1"]
build-backend = "poetry.core.masonry.api"
